@@ -1,2 +1,3 @@
 DIST ovirt-host-deploy-1.1.3.tar.gz 240817 SHA256 37d26e5485036447f458f78b433cdce5473a1b69515db5276234daebcb160f17 SHA512 91a1aac1bbf30793ae46d605cfd9a412fa27f0f91c26bcc6697b224ce0fc6d15965367bfadd033bed91ea4d7e405bdab781821573507b47d7b1ed515471c3128 WHIRLPOOL f43707e4430119d727d0b8d71a1327b4e790aebbe6665db3ef6ba7d2b89dbb0e74ae43b2451227c0a7ccae8c320be461f99b8c9acb63a0b570296f16127badcf
 DIST ovirt-host-deploy-1.2.0.tar.gz 254020 SHA256 80598f67c5a85cac2179feca83fac2be7d76f1c93dc85d62b883a91b445b64f5 SHA512 987ff69ca8bbb2106e439ccb0ea04e4525d818477d06a3cbace5f0440fdfcd0bbc2e8f84d015c4e563f8330baefe3d1f728440e98f635e31ac504bf3d4938712 WHIRLPOOL d243dc2c16006788832d89096ca9e8bb9191400dca6b6e0ccf690d25a98872892e71b79957225e488f8f1fe60de5a9add07a260ed77c733a47d4b1d0cb6355d5
+DIST ovirt-host-deploy-1.2.1.tar.gz 254608 SHA256 4955064a7abdfffb6a59ff5ee49946c7527f89b487b4a96c5bd73084600a29d7 SHA512 4ac771d5ce4eeab3e0658f7601f4961729c510a33be515e70d746ff9f7ad8350266df7fea6ff2afb9ace1ec130a748539c3527f8ca5246cf8e57beae8ced1f2d WHIRLPOOL 4b4e33fcae3bdfd948cea0d70fd844d032dd1d13f73ba7a515badb663f305bca868b3e7cb370f88a418f86701d0175a9e36f1bee730f3d1db85227645d6b1032
